{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 185,
  "lineage": "10e9e32b-5f45-eafd-b1c0-aa731c960eb9",
  "resources": [
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d6bc6806bcf82707",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-236-191-177.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.191.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat-gw-1"
            },
            "tags_all": {
              "Name": "prod-nat-gw-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05d45bd6874e7aeee",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-139-23.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.139.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-nat-gw-2"
            },
            "tags_all": {
              "Name": "prod-nat-gw-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:internet-gateway/igw-0488e8c3a03bca80c",
            "id": "igw-0488e8c3a03bca80c",
            "owner_id": "782642133551",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d6bc6806bcf82707",
            "connectivity_type": "public",
            "id": "nat-0ead07585491bc4c3",
            "network_interface_id": "eni-07da4f388de265712",
            "private_ip": "10.200.11.91",
            "public_ip": "15.236.191.177",
            "subnet_id": "subnet-0d3793248b6bc565a",
            "tags": {
              "Name": "prod-nat-gw-1"
            },
            "tags_all": {
              "Name": "prod-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d45bd6874e7aeee",
            "connectivity_type": "public",
            "id": "nat-0796684e99d0ebd50",
            "network_interface_id": "eni-0eace2b1be8a61b5c",
            "private_ip": "10.200.22.139",
            "public_ip": "15.188.139.23",
            "subnet_id": "subnet-01cad58d207d2e924",
            "tags": {
              "Name": "prod-nat-gw-2"
            },
            "tags_all": {
              "Name": "prod-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:route-table/rtb-0d314420d39795b56",
            "id": "rtb-0d314420d39795b56",
            "owner_id": "782642133551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ead07585491bc4c3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-route-private-subnet-1"
            },
            "tags_all": {
              "Name": "prod-route-private-subnet-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:route-table/rtb-07d405d913e39cfc0",
            "id": "rtb-07d405d913e39cfc0",
            "owner_id": "782642133551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0796684e99d0ebd50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-route-private-subnet-2"
            },
            "tags_all": {
              "Name": "prod-route-private-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:route-table/rtb-01ff7d305577eac92",
            "id": "rtb-01ff7d305577eac92",
            "owner_id": "782642133551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0488e8c3a03bca80c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-route-public-subnets"
            },
            "tags_all": {
              "Name": "prod-route-public-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d75bed863a2cee",
            "route_table_id": "rtb-0d314420d39795b56",
            "subnet_id": "subnet-0d3793248b6bc565a"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022c5f5d0fe3c4733",
            "route_table_id": "rtb-07d405d913e39cfc0",
            "subnet_id": "subnet-01cad58d207d2e924"
          },
          "dependencies": [
            "module.vpc-prod.aws_eip.nat",
            "module.vpc-prod.aws_nat_gateway.nat",
            "module.vpc-prod.aws_route_table.private_subnets",
            "module.vpc-prod.aws_subnet.private_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0225bcc14398dd6c1",
            "route_table_id": "rtb-01ff7d305577eac92",
            "subnet_id": "subnet-0138662592aafff75"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092edad1f1f99e267",
            "route_table_id": "rtb-01ff7d305577eac92",
            "subnet_id": "subnet-02f96e57c6107d87a"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.main",
            "module.vpc-prod.aws_route_table.public_subnets",
            "module.vpc-prod.aws_subnet.public_subnets",
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:subnet/subnet-0d3793248b6bc565a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.200.11.0/24",
            "id": "subnet-0d3793248b6bc565a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782642133551",
            "tags": {
              "Name": "prod-private-1"
            },
            "tags_all": {
              "Name": "prod-private-1"
            },
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:subnet/subnet-01cad58d207d2e924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.200.22.0/24",
            "id": "subnet-01cad58d207d2e924",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782642133551",
            "tags": {
              "Name": "prod-private-2"
            },
            "tags_all": {
              "Name": "prod-private-2"
            },
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:subnet/subnet-0138662592aafff75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.200.1.0/24",
            "id": "subnet-0138662592aafff75",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782642133551",
            "tags": {
              "Name": "prod-public-1"
            },
            "tags_all": {
              "Name": "prod-public-1"
            },
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:subnet/subnet-02f96e57c6107d87a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.200.2.0/24",
            "id": "subnet-02f96e57c6107d87a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "782642133551",
            "tags": {
              "Name": "prod-public-2"
            },
            "tags_all": {
              "Name": "prod-public-2"
            },
            "vpc_id": "vpc-03ab9221eadf24860"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.main",
            "module.vpc-prod.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:782642133551:vpc/vpc-03ab9221eadf24860",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0e2be9f296fc8276e",
            "default_route_table_id": "rtb-0cf77f0fa8aaf93ba",
            "default_security_group_id": "sg-0c5fc994b002f36f4",
            "dhcp_options_id": "dopt-0fc515d4a028609d7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03ab9221eadf24860",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cf77f0fa8aaf93ba",
            "owner_id": "782642133551",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}